# maix-chat2

./: Cargo.toml  log
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  parser.rs  serializer.rs  tests.rs
server/: Cargo.toml
server/src/: main.rs
