[package]
name = "maix-chat-client"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common", package="maix-chat-common"}
crossbeam-channel = "0.5.0"
crossterm = "0.19.0"

[dependencies.tui]
version = "0.14.0"
default-features= false
features=["crossterm"]
