[package]
name = "maix-chat-server"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common", package="maix-chat-common"}
crossbeam-channel = "0.5.0"
log = "0.4.11"
simplelog = "0.9"
rand = "0.8.1"
ctrlc = "3.1.7"
